two simple route with cdi without spring and web.xml

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.jboss.as.plugins</groupId>
+                <artifactId>jboss-as-maven-plugin</artifactId>
+                <version>7.9.Final</version>
+            </plugin>
         </plugins>
     </build>
 
