--- a/fuse-spring/pom.xml
+++ b/fuse-spring/pom.xml
@@ -105,6 +105,11 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-kahadb-store</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.190</version>
+        </dependency>
 
     </dependencies>
 
